pyinterp/pyinterp/pyinterp/tests/must_pass/scope/errors/misplaced_nonlocal4.py
def f():
    global x
    def g():
        nonlocal x
        return x
    return g

x = 1
f()